test/testdata/classes/invalid_property_assignment_error.lox
class Foo {}
Foo.x = 1; // error: property assignment is not valid for 'class' object
